FinalProject/force-app/main/default/objects/Project__c/fields/ActualTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualTotalAmount__c</fullName>
    <formula>AmountOpp__c - AmountEstimated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActualTotalAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>