FinalProject/force-app/main/default/objects/Project__c/fields/AmountEstimated__c.field-meta.xml
<CustomField>
    <fullName>AmountEstimated__c</fullName>
    <label>AmountEstimated</label>
    <summarizedField>ProjectLineItem__c.AmountEstimated__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>