FinalProject/force-app/main/default/objects/Project__c/fields/AmountOpp__c.field-meta.xml
<CustomField>
    <fullName>AmountOpp__c</fullName>
    <label>AmountOpp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>