FinalProject/force-app/main/default/objects/Project__c/fields/CompleteAssigmentHours__c.field-meta.xml
<CustomField>
    <fullName>CompleteAssigmentHours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CompleteAssigmentHours</label>
    <type>Checkbox</type>
</CustomField>