FinalProject/force-app/main/default/objects/Project__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>