FinalProject/force-app/main/default/objects/Project__c/fields/EndProject__c.field-meta.xml
<CustomField>
    <fullName>EndProject__c</fullName>
    <label>EndProject</label>
    <required>true</required>
    <type>Date</type>
</CustomField>