FinalProject/force-app/main/default/objects/Project__c/fields/PMID__c.field-meta.xml
<CustomField>
    <fullName>PMID__c</fullName>
    <label>PMID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>