FinalProject/force-app/main/default/objects/Project__c/fields/QuantityTotalHours__c.field-meta.xml
<CustomField>
    <fullName>QuantityTotalHours__c</fullName>
    <label>QuantityTotalHours</label>
    <summarizedField>ProjectLineItem__c.QuantityHours__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>