FinalProject/force-app/main/default/objects/Project__c/fields/RealAmount__c.field-meta.xml
<CustomField>
    <fullName>RealAmount__c</fullName>
    <label>RealAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>