FinalProject/force-app/main/default/objects/Project__c/fields/SquadLeadId__c.field-meta.xml
<CustomField>
    <fullName>SquadLeadId__c</fullName>
    <label>SquadLeadId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>