FinalProject/force-app/main/default/objects/Project__c/validationRules/AmountEstimated.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountEstimated</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISCHANGED( Status__c ) &amp;&amp; AmountOpp__c &lt; AmountEstimated__c, true, false)</errorConditionFormula>
    <errorMessage>Review the allocated amount</errorMessage>
</ValidationRule>