FinalProject/force-app/main/default/objects/Project__c/validationRules/ChangeStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeStatus</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISCHANGED(Status__c)&amp;&amp; (ISBLANK(SquadLead__c) ||  AmountOpp__c &lt; AmountEstimated__c ||  CompleteAssigmentHours__c == false ) , true, false)</errorConditionFormula>
    <errorMessage>It is not possible to change the status, check the amount of the estimated amount and that the project has a SquadLead</errorMessage>
</ValidationRule>