FinalProject/force-app/main/default/objects/Project__c/validationRules/IncompleteRoleAssignmentHours.validationRule-meta.xml
<ValidationRule>
    <fullName>IncompleteRoleAssignmentHours</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISCHANGED( Status__c ) &amp;&amp;  CompleteAssigmentHours__c == false , true, false)</errorConditionFormula>
    <errorMessage>Role hours have not been fully assigned</errorMessage>
</ValidationRule>