FinalProject/force-app/main/default/objects/Project__c/validationRules/SquadLeadNotAssigned.validationRule-meta.xml
<ValidationRule>
    <fullName>SquadLeadNotAssigned</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISCHANGED(Status__c)&amp;&amp; ISBLANK(SquadLead__c) , true, false)</errorConditionFormula>
    <errorDisplayField>SquadLead__c</errorDisplayField>
    <errorMessage>It is not possible to change the status, the project has a SquadLead.</errorMessage>
</ValidationRule>