FinalProject/force-app/main/default/objects/Project__c/validationRules/StatusInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL( Status__c , &apos;In Progress&apos;) &amp;&amp; (ISCHANGED( EndProject__c ) || ISCHANGED( AmountOpp__c ) ||ISCHANGED( Customer__c ) ||ISCHANGED( PM__c ) ||ISCHANGED( StartProject__c ) ||ISCHANGED( SquadLead__c ) ||ISCHANGED( Name )), true, false)</errorConditionFormula>
    <errorMessage>You cannot modify a project that is in progress</errorMessage>
</ValidationRule>