FinalProject/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartProject__c</columns>
    <columns>EndProject__c</columns>
    <columns>QuantityTotalHours__c</columns>
    <columns>AmountOpp__c</columns>
    <columns>Status__c</columns>
    <columns>PM__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>